Closed
Bug 1229165
Opened 10 years ago
Closed 10 years ago
[css-grid] min-height is not applied to grid container
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla45
Tracking | Status | |
---|---|---|
firefox45 | --- | fixed |
People
(Reporter: jfernandez, Assigned: MatsPalmgren_bugz)
References
(Blocks 1 open bug)
Details
(Keywords: testcase)
Attachments
(3 files)
488 bytes,
text/html
|
Details | |
1.18 KB,
patch
|
dholbert
:
review+
|
Details | Diff | Splinter Review |
6.59 KB,
patch
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:38.0) Gecko/20100101 Firefox/38.0 Iceweasel/38.2.1
Build ID: 20150828090403
Steps to reproduce:
Loading the attached test case.
Actual results:
The grid container is 50px height, not honoring the min-height value of 100px.
Expected results:
The grid container should have honored the min-height restriction, hence being sized as 100px height.
Assignee | ||
Comment 1•10 years ago
|
||
Thanks for the bug report Javier! I simply forgot to add this.
Assignee | ||
Comment 2•10 years ago
|
||
Attachment #8694472 -
Flags: review?(dholbert)
Assignee | ||
Comment 3•10 years ago
|
||
Comment 4•10 years ago
|
||
Comment on attachment 8694472 [details] [diff] [review]
[css-grid] Apply min/max-width/height properties on the grid container.
Review of attachment 8694472 [details] [diff] [review]:
-----------------------------------------------------------------
Commit message nit:
> Bug 1229165 - [css-grid] Apply min/max-width/height properties on the grid container. r=dholbert
Technically, this patch only does this for the block-axis.
Maybe adjust prose to something like:
"Apply min/max-width/height properties to clamp block size of auto-height grid containers"
r=me regardless
Attachment #8694472 -
Flags: review?(dholbert) → review+
Assignee | ||
Comment 6•10 years ago
|
||
> Technically, this patch only does this for the block-axis.
True. I fixed the commit message as suggested.
Flags: in-testsuite+
Comment 7•10 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/81dcf2afd8f6
https://hg.mozilla.org/mozilla-central/rev/6443e8cb46c3
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in
before you can comment on or make changes to this bug.
Description
•