Bug 1229165 - [css-grid] Apply min/max-width/height properties to clamp block-size of auto-height grid containers.  r=dholbert